PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-6_return55withoutend/gcc-compile.txt
input.c:2:13: error: expected ';' after return statement
   return 55
            ^
            ;
1 error generated.

return code: 1
